# gcp-icons-for-plantuml

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: AllIconsShowcase.puml  BasicLocalExample.puml  DynamicAllIcons.puml  HelloLocalWorld.puml  HelloWorld.puml  ShowAllInCategory.puml
scripts/: config.yml
src/gcp_icons_for_plantuml/: __main__.py  builder.py  cli.py  configgen.py  env.py  fetcher.py  icon.py  kitchen_sink.py
